# SFML-Networking

./: CMakeLists.txt  CMakePresets.json  README.md
src/: client.cpp  main.cpp  server.cpp
